--- a/src/Vistas/Menu.form
+++ b/src/Vistas/Menu.form
@@ -92,6 +92,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Centro de Vacunacion"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCentroDeVacunacionActionPerformed"/>
+          </Events>
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jFormularioCentroVacunacion">
               <Properties>
