--- a/src/Vistas/VacunaRegistro.form
+++ b/src/Vistas/VacunaRegistro.form
@@ -50,7 +50,7 @@
                           <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                           <Component id="jCPostergar" min="-2" pref="111" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                          <Component id="jCentros" min="-2" pref="111" max="-2" attributes="0"/>
+                          <Component id="jVacunar" min="-2" pref="111" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
@@ -127,7 +127,7 @@
                   <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jCPostergar" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
-                      <Component id="jCentros" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
+                      <Component id="jVacunar" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
                       <Component id="jCancelar" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="291" max="32767" attributes="0"/>
@@ -204,7 +204,7 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="jCentros">
+        <Component class="javax.swing.JButton" name="jVacunar">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
@@ -229,7 +229,7 @@
             </Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCentrosActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jVacunarActionPerformed"/>
           </Events>
         </Component>
         <Component class="com.toedter.calendar.JDateChooser" name="jDCFechaColocacion">
